--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 URL="mongodb+srv://progressmonitor:<password>@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
+npm install
+npm run dev
