--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "todo-app-template-js",
-  "version": "1.0.0",
-  "description": "Todo App",
-  "main": "index.js",
-  "scripts": {
-    "start": "NODE_PATH=. node server/index"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codesphere-cloud/todo-app-template-js.git"
-  },
-  "keywords": [
-    "todo",
-    "template"
-  ],
-  "author": "Roman Frolov",
-  "license": "ISC",
+  "name": "employee-management",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "sqlite3": "^5.0.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.36.4",
+    "formik": "^2.2.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "eslint": "^7.19.0",
-    "nodemon": "^2.0.7"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
