--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-URL="mongodb+srv://progressmonitor:<password>@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
+URL="mongodb+srv://progressmonitor:1cE6KlSrGPFwDPPC@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
