--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-url = "mongodb+srv://progressmonitor:1cE6KlSrGPFwDPPC@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
+uri = "mongodb+srv://progressmonitor:1cE6KlSrGPFwDPPC@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
