--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-uri = "mongodb+srv://progressmonitor:1cE6KlSrGPFwDPPC@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
+  const uri = "mongodb+srv://progressmonitor:1cE6KlSrGPFwDPPC@progressmonitor-test.ufljyxr.mongodb.net/?retryWrites=true&w=majority"
